--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 
 ## User settings
 xcuserdata/
-Network/Constants.swift
+iWeather/Network/Constants.swift
 ## compatibility with Xcode 8 and earlier (ignoring not required starting Xcode 9)
 *.xcscmblueprint
 *.xccheckout
